# Partikel_Simulation_Strukdat

./: .gitignore  CMakeLists.txt  PENJELASAN_KODE.md  README.md  build.bat  main.cpp  main.cpp.bak
src/: main.cpp
